support starting victoria docker